Tech stack wrapping for mobile fixed

--- a/styles/styles.sass
+++ b/styles/styles.sass
@@ -135,4 +135,4 @@ a
     overflow: hidden
 
 .tech-column
-  max-width: 25%
+  min-width: 12rem
